# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "database"
version = "0.0.1"
dependencies = [
    "mysql-connector-python",
    "faker",
]

[tool.setuptools]
py-modules = ["insert_data", "update_database"]

